/*
 * $Id: ChangeLog,v 1.668 2003/01/31 21:07:42 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-01 13:46 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  ! source/vm/thread.c
    ! Fixed an error introduced by my on last optimization tests.
      Now it seems that MT is pretty stable also under GC. There
      are still minor problems, but now it goes great.
      
  % source/vm/estack.c
    % Optimized MT programs, so that estack calls hb_threadGetCurrentStack()
      only once per function.
  
  * tests/mtgc.prg
    * cleaned up the code and added an header.
    
  + doc/thread.txt
    + Thread api reference: functions in thread.c and their description.


2003-01-31 18:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tpopup.prg
  * source/rtl/ttopbar.prg
    ! Fix display problems in child popup menu.
      Reported by Gianluca Piemonte.

2003-01-31 20:40 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    * Prototype of Subscribe() and SubscribeAll() changed. Now there
      is an addititonal parameter returning the status in timed out
      requests:
      Subscribe( Mutex[, nMillisec[, @bStatus]] ) --> Any
      On exit, bStatus will be false if timeout has expired, and true
      if notification is issued.

  * tests/mtcomplex.prg
    * Minor style fixes

  * tests/inetto.prg
    * using the new Subscribe() grammar in timeout wait.

2003-01-31 20:15 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/rtl/gtsln/mousesln.c
    * Some cleanup related to last mousesln.c fixes
    
2003-01-31 19:40 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/inet.c
    ! fixed a potential problem in InetRecv().

2003-01-31 01:06 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/objfunc.prg
    + Added new __objDerivedDiff( oObj, oBase, nScope )
